fix feed item length with overflow hidden

--- a/public/stylesheets/haveeruexaminer.css
+++ b/public/stylesheets/haveeruexaminer.css
@@ -33,3 +33,8 @@
 .ui.list>.result-item .result-description {
 	padding-top: 5px;
 }
+
+.ui.items>.item>.content>.item-description {
+	height: 50px; 
+  overflow: hidden;
+}
